# jdict

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Config.toml  Dockerfile  JDict.toml  LICENSE  README.md  Readme.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
code/database/: Cargo.toml
code/database/src/: database.rs  fulltext_index.rs  jmdict_parsing.rs  kanjidic_parsing.rs  kanjivg.rs  kanjivg_parsing.rs  lib.rs  shared_api.rs  util.rs
code/jdict-egui/: Cargo.toml
code/jdict-egui/src/: egui_svg_path.rs  history.rs  main.rs
code/jdict-search/: Cargo.toml
code/jdict-search/src/: lib.rs
code/jdict-server/: Cargo.toml
code/jdict-server/src/: main.rs
code/jdict-shared/: Cargo.toml
code/jdict-shared/src/: database.rs  fulltext_index.rs  jmdict.rs  jmdict_parsing.rs  jmdict_result_rating.rs  kana.rs  kanjidic.rs  kanjidic_parsing.rs  kanjivg.rs  kanjivg_parsing.rs  lib.rs  phonetic.rs  shared_api.rs  util.rs
code/jdict-tauri/: Cargo.toml  tauri.conf.json
code/jdict-tauri/src/: main.rs
code/jdict-tiny/: Cargo.toml
code/jdict-tiny/src/: lib.rs  num_compression.rs
code/kana-transliteration/: Cargo.toml
code/kana-transliteration/src/: data.rs  lib.rs
code/server/: Cargo.toml  JDict.toml
code/server/src/: api.rs  fulltext_index.rs  jmdict.rs  jmdict_parsing.rs  kanjidic_parsing.rs  main.rs  server_state.rs  util.rs  zipped_xml_file.rs
code/tauri/: Cargo.toml  tauri.conf.json
code/tauri/src/: main.rs
code/web/: package.json
code/web/src/: main.scss  main.ts
code/web/src/backend/: cache.ts  kanjivg.ts  rust_compat.ts  search.ts
code/web/src/components/: BackgroundImage.vue  BackgroundImages.ts  Entry.vue  ImageLodChain.vue  KanjiInfo.vue  SearchBar.vue  Spinner.vue
code/web/src/components/entry/: MeaningText.vue
code/web/src/components/kanji_info/: KanjiCompositionNode.vue  KanjiDecomposition.vue  KanjiDecompositionNode.vue  KanjiReadings.vue  StrokeOrder.vue
code/web/src/routes/: Search.vue
code/web/src/util/: UseInterval.ts  ViewportSize.ts
scripts/: generate-sizes.js
server/: .gitignore  Cargo.toml  compile_flags.txt  premake5.lua
server/scripts/: build-debug.bat  build-dev.bat  build-release.bat
server/src/: api.rs  fulltext_index.rs  jmdict.rs  jmdict_parsing.rs  jmdict_result_rating.rs  kana.rs  kanjidic.rs  kanjidic_parsing.rs  main.rs  server_state.rs
server/src/server/: cache.hpp  jmdict.cpp  jmdict.hpp  jmdict_alloc.hpp  jmdict_index.cpp  jmdict_index.hpp  jmdict_json.cpp  jmdict_json.hpp  kana_util.cpp  kana_util.hpp  main.cpp  text_index.hpp  timer.hpp  to_json.cpp  to_json.hpp
server/src/server-test/: test.cpp
server/src/server/database/: database.hpp
server/src/server/database/jmdict/: jmdict.cpp  jmdict.hpp  jmdict_index.cpp  jmdict_index.hpp
server/src/server/database/kanjidic/: kanjidic.cpp  kanjidic.hpp  kanjidic_index.cpp  kanjidic_index.hpp
server/src/server/http/: http.cpp  http.hpp  http.router.cpp  http.router.hpp  http.staticfiles.hpp  http.swagger.cpp  http.swagger.hpp  http.tests.hpp
server/src/server/util/: alloc.unused.hpp  file2vector.cpp  file2vector.hpp  full_text_index.hpp  kana.cpp  my_rapidxml_utils.hpp  text_index.hpp  timer.hpp  utf8.hpp  utf8_sliding_window.hpp
src/: App.svelte  App.vue  SearchService.ts  app.scss  database.rs  debounce.rs  dictionary_search.rs  jmdict.ts  lib.rs  main.rs  main.scss  main.ts  pagination.rs
src/backend/: jmdict.ts  kanjidic.ts  search.ts
src/components/: BackgroundImage.vue  BackgroundImages.ts  Entry.vue  ImageLodChain.vue  KanjiInfo.vue  Octicon.vue  OnHover.vue  Result.vue  SearchBar.vue  SearchBarSuggestions.vue  Spinner.vue
src/components/entry/: KanjiText.vue  MeaningText.vue
src/jmdict/: entry.rs  gloss.rs  kanji.rs  mod.rs  parsing.rs  reading.rs  sense.rs
src/kana/: mod.rs
src/kanjidic2/: mod.rs  parsing.rs  reading_meaning.rs
src/kanjivg/: fixed_u8.rs  mod.rs  path.rs
src/lib/: SearchBar.svelte  Spinner.svelte
src/routes/: KanjiSearch.vue  Results.svelte  Search.vue
src/util/: OnKeyboardShortcut.ts  Unicode.ts  UseMedia.ts
tools/: generate-sizes.mjs  init.sh
web/: .dockerignore  Dockerfile  release.sh  vite.config.ts
web/src/backend/: kanjidic.ts
web/src/components/: BackgroundImage.vue  BackgroundImages.ts  KanjiInfo.vue
web/src/components/entry/: KanjiText.vue
web/src/util/: OnKeyboardShortcut.ts  OnScrolledToBottom.ts  OnScrolledUsingTouch.ts  OnTabFocusChange.ts
