[package]
name = "jdict2"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A Japanese dictionary"
repository = "https://github.com/Cannedfood/jdict"

default-run = "jdict-egui"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = 'thin'
panic = 'abort'
debug = false

[dependencies]
compact_str = { version = "0.8.0", features = ["serde"] }
eframe = "0.29.1"
egui = "0.29.1"
flate2 = "1.0.34"
isolang = { version = "2.4.0", features = ["serde"], default-features = false }
itertools = "0.13.0"
postcard = { version = "1.0.10", features = ["use-std"] }
roxmltree = { version = "0.20.0", features = ["std"], default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive", "phf"] }
