[package]
name = "jdict2"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A Japanese dictionary"
repository = "https://github.com/Cannedfood/jdict"

default-run = "jdict-egui"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = 'thin'
panic = 'abort'
debug = false

[dependencies]
compact_str = { version = "0.8.1", features = ["serde"] }
eframe = "0.31.0"
egui = "0.31.0"
flate2 = "1.0.35"
isolang = { version = "2.4.0", features = ["serde"], default-features = false }
itertools = "0.14.0"
postcard = { version = "1.1.1", features = ["use-std"] }
roxmltree = { version = "0.20.0", features = ["std"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde"] }
strum = { version = "0.27.0", features = ["derive", "phf"] }
