[package]
name = "jdict2"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "A Japanese dictionary"
repository = "https://github.com/Cannedfood/jdict"

default-run = "jdict-egui"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = 'thin'
panic = 'abort'
debug = false

[dependencies]
compact_str = { version = "0.9.0", features = ["serde"] }
eframe = "0.34.0"
egui = "0.34.0"
flate2 = "1.1.9"
isolang = { version = "2.4.0", features = ["serde"], default-features = false }
itertools = "0.14.0"
postcard = { version = "1.1.3", features = ["use-std"] }
roxmltree = { version = "0.21.1", features = ["std"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["serde"] }
strum = { version = "0.28.0", features = ["derive", "phf"] }
