[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
libxml = "0.3.1"
rocket = { version = "0.5.0-rc.2", features = ["http2", "json"] }
serde = "1.0.147"
serde_cbor = "0.11.2"
