[package]
name = "jdict-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
eframe = "0.22.0"
egui = "0.22.0"
itertools = "0.11.0"
jdict-shared = { version = "0.1.0", path = "../jdict-shared" }
