[package]
name = "jdict-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package."*"]
opt-level = 3

[dependencies]
figment = { version = "0.10.8", features = ["toml"] }
futures = "0.3.25"
itertools = "0.10.5"
jdict-shared = { version = "0.1.0", path = "../jdict-shared" }
opener = "0.5.0"
rocket = { version = "0.5.0-rc.2", features = ["http2", "json"] }
rocket_async_compression = "0.2.0"
serde = "1.0.147"
tokio = "1.24.1"
