[package]
name = "jdict-server"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { version = "0.10.10", features = ["toml"] }
futures = "0.3.28"
itertools = "0.11.0"
jdict-shared = { version = "0.1.0", path = "../jdict-shared" }
opener = "0.6.1"
rocket = { version = "0.5.0-rc.3", features = ["http2", "json"] }
rocket_async_compression = "0.5.0"
serde = "1.0.188"
tokio = "1.32.0"
