[package]
name = "jdict-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
flate2 = "1.0.27"
itertools = "0.11.0"
roxmltree = "0.18.0"
serde = { version = "1.0.188", features = ["derive"] }
